@@ -5,6 +5,10 @@
     "neostorage:armorstorage2",
     "neostorage:armorstorage3",
     "neostorage:armorstorage4",
+    "neostorage:otherstorage1",
+    "neostorage:otherstorage2",
+    "neostorage:otherstorage3",
+    "neostorage:otherstorage4",
     "neostorage:toolstorage1",
     "neostorage:toolstorage2",
     "neostorage:toolstorage3",
